--- a/feeling/分布式知识汇总.md
+++ b/feeling/分布式知识汇总.md
@@ -122,4 +122,4 @@
         * 如果获取到了锁，key 的真正有效时间等于有效时间减去获取锁所使用的时间，减少超时的几率；
         * 如果获取锁失败，客户端应该在所有的 Redis 实例上进行解锁，即使是上一步操作请求失败的节点，防止因为服务端响应消息丢失，但是实际数据添加成功导致的不一致。
         
-   在redis官方推荐的java客户端redisson中内置了对redlock的实现，同样golang客户端中也有对分布式锁的实现。[golang实现的redis客户端](https://github.com/go-redis/redis)
+   在redis官方推荐的java客户端redisson中内置了对redlock的实现，[golang实现的redis客户端](https://github.com/go-redis/redis)
