--- a/feeling/高并发场景架构.md
+++ b/feeling/高并发场景架构.md
@@ -14,3 +14,9 @@
    * 优化方向： 提高网站性能，保护数据库
    
    * 具体措施： 静态化，分布式，缓存，消息队列
+
+## 什么是cookie，什么是session?
+  
+   * Cookie: 采用的是在客户端保存状态和数据的方案 （客户浏览器上），单个Cookie保存的数据不能超过4K
+   
+   * Session： 采用在服务器端保存状态和数据的方案 （服务器上），当访问增多，会比较占用大量资源
