--- a/feeling/高并发场景架构.md
+++ b/feeling/高并发场景架构.md
@@ -18,5 +18,7 @@
 ## 什么是cookie，什么是session?
   
    * Cookie: 采用的是在客户端保存状态和数据的方案 （客户浏览器上），单个Cookie保存的数据不能超过4K
-   
+       
+        ps: 为了防止客服端伪造登录ID，或者token令牌，这里一般会用到AES等对称加密技术对真实数据进行加密，然后在服务端进行解密
+           
    * Session： 采用在服务器端保存状态和数据的方案 （服务器上），当访问增多，会比较占用大量资源
