--- a/tools/软件设计画图工具.md
+++ b/tools/软件设计画图工具.md
@@ -16,12 +16,13 @@
 
 
 [goland 破解版本](https://shimo.im/docs/dKYCkd8PrX3ckX99/read)
-* 需要在hosts文件中加入地址屏蔽，防止在线校验
+
+**服务器激活**
+
+服务器激活选择idea上的 License server激活
 
 ```
-0.0.0.0 account.jetbrains.com
-0.0.0.0 www.jetbrains.com
-
+https://fls.jetbrains-agent.com
 ```
 
 ## 提升审美的网站
