--- a/tools/软件设计画图工具.md
+++ b/tools/软件设计画图工具.md
@@ -8,9 +8,9 @@
 
 [processon在线画图网站](https://www.processon.com/)
 
-## goland 2019.02.1 破解汉化版工具
+## goland、pycharm、idea 等系列开发工具破解
 
-[goland 2019.03 破解汉化版工具](https://www.jiweichengzhu.com/article/b31ddbd89d8d46ae89c8c560eb8f9edc)
+[goland 2020.01 破解版](https://www.cnblogs.com/iBinary/p/12916493.html)
 
 [破解插件下载地址](https://pan.baidu.com/s/17DuJ35QTumAgYHVFHgrVZw)
 
