--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -21,3 +21,4 @@ swagger UI |在线API文档工具|https://github.com/xiaoymin/swagger-bootstrap-
 炒股k线分析|交易趋势在线网页|cn.tradingview.com
 hackerrank|在线语言编码实践网站 |https://www.hackerrank.com/dashboard
   loki     |高效的日志收集工具            |https://github.com/grafana/loki
+zlsgo|非常实用的一个go项目总结| https://github.com/sohaha/zlsgo
