--- a/framework/软件设计中的一些常用术语解释.md
+++ b/framework/软件设计中的一些常用术语解释.md
@@ -54,5 +54,16 @@
    10 | Caching(缓存）
    11 | Mesage Middleware
     
+ **对象解释**
   
+  对象简称|说明
+   ----|-----
+PO即persistant Object 持久对象|在O/R 映射（即ORM-ObjectRelationMapping）中出现的概念，通常对应数据模型（数据库），是与数据库汇总的表想影射的java对象，最简单的PO就是对应数据库中某个表中的一条记录，多个记录则用PO的集合。PO中不应该包含任何对数据库的操作。
+DO即Domain Object 领域对象|是从现实世界中抽象出来的有形或无形的业务实体。
+TO即Transfer Object数据传输对象|不同应用程序之间传输的对象
+DTO即Data Transfer Object:数据传输对象|泛指用于展示层与服务层之间的数据传输对象
+VO即value Object|通常用于业务层之间的数据传递，和PO一样仅包含数据，但是抽象出的业务对象，可以和表对应，用new 关键字创建，GC回收
+BO即Business Object 业务对象|主要是将业务逻辑封装为一个对象，这个对象可以包含一个或多个其他对象，如一个简历中包含教育经历、工作经历、社会关系等，可以将一个教育经历对应一个PO、工作经历对应一个PO、设计关系对应一个PO，然后简历一个对应简历的BO兑现处理简历，每个BO包含这个PO这样处理业务逻辑是，可以针对BO去处理。封装业务逻辑的java对象，通过调用DAO方法，结合PO,VO进行业务操作。
+POJO即Plain Ordinary Java Object|简单无规则的java对性，即在一些O/R 映射工具中，能做到维护数据库表记录的PO完全是一个符合Java Bean规范的纯java对象
+
   
