--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -62,4 +62,4 @@ https://fls.jetbrains-agent.com
 
 ## VPN 工具
 
-[ubuntu 16.04中安装OpenVPN](ubuntu16.04 系统中OpenVPN安装)
+[ubuntu16.04 系统中OpenVPN安装](https://www.vxworks.net/linux/191-step-by-step-for-installing-openvpn-on-ubuntu-16-04)
