--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -64,5 +64,7 @@ https://fls.jetbrains-agent.com
 
 [ubuntu16.04 系统中OpenVPN安装](https://www.vxworks.net/linux/191-step-by-step-for-installing-openvpn-on-ubuntu-16-04)
 
+[github加速神器](https://github.com/dotnetcore/FastGithub)
+
 ## 黑客技术相关
 [Linux服务器暴力破解](https://www.freebuf.com/sectool/159488.html)
