--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -74,3 +74,7 @@ https://fls.jetbrains-agent.com
 
 ## 黑客技术相关
 [Linux服务器暴力破解](https://www.freebuf.com/sectool/159488.html)
+
+## 外网翻墙
+
+[免费翻墙资源](https://github.com/bannedbook/fanqiang/wiki/Chrome%E4%B8%80%E9%94%AE%E7%BF%BB%E5%A2%99%E5%8C%85)
