--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -58,6 +58,8 @@ https://fls.jetbrains-agent.com
 
 [适合快速对想要学习编程语言进行语法扫盲](https://www.runoob.com/)
 
+[菜鸟提供的各种在线调试工具网址](https://c.runoob.com/)
+
 
 ## 虚拟化工具
 
