--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -67,6 +67,8 @@ https://fls.jetbrains-agent.com
 
 [国内镜像下载地址](https://mirrors.ustc.edu.cn/)
 
+[linux系统磁盘扩容工具gparted](https://gparted.org/download.php)
+
 
 ## VPN 工具
 
