--- a/framework/高并发处理.md
+++ b/framework/高并发处理.md
@@ -15,7 +15,7 @@
    
    * 具体措施： 静态化，分布式，缓存，消息队列
 
-## 什么是cookie，什么是session?
+## [什么是cookie，什么是session?](https://juejin.cn/post/7133758754818326564)
   
    * Cookie: 采用的是在客户端保存状态和数据的方案 （客户浏览器上），单个Cookie保存的数据不能超过4K
        
