--- a/framework/经典博客文章收藏.md
+++ b/framework/经典博客文章收藏.md
@@ -11,3 +11,5 @@
 * [分布式缓存介绍](https://zhuanlan.zhihu.com/p/91539644)
 
 * [阻塞与非阻塞IO处理](https://blog.csdn.net/shixin_0125/article/details/78777216)
+
+* [golang中跨域问题处理](https://juejin.cn/post/6987205879653204004)
