--- a/framework/经典博客文章收藏.md
+++ b/framework/经典博客文章收藏.md
@@ -13,3 +13,5 @@
 * [阻塞与非阻塞IO处理](https://blog.csdn.net/shixin_0125/article/details/78777216)
 
 * [golang中跨域问题处理](https://juejin.cn/post/6987205879653204004)
+
+* [jwt实现原理](https://www.ruanyifeng.com/blog/2018/07/json_web_token-tutorial.html)
