--- a/framework/高并发处理.md
+++ b/framework/高并发处理.md
@@ -1,4 +1,4 @@
-# 高并发处理
+# 高并发、高可用
 
 ## 思想 
 
@@ -46,6 +46,7 @@
   系统已一个恒定的速率往桶放入令牌。若有请求需要处理，则从令牌桶里获取令牌，当桶里没有令牌，则拒绝服务。
 
   令牌桶算法并不能实际的控制速率。比如，10秒往桶里放入10000个令牌桶，即10秒内只能处理10000个请求，那么qps就是100。但这种模型可以出现1秒内把10000个令牌全部消费完，即qps为10000。所以令牌桶算法实际是限制的平均流速。具体控制的粒度以放令牌的间隔和每次的量来决定。若想要把流速控制的更加稳定，就要缩短间隔时间。
+
 
   golang中的RateLimter就是利用的令牌桶原理。
 
