Update and rename 高并发处理.md to 架构设计.md

--- a/framework/架构设计.md
+++ b/framework/架构设计.md
@@ -55,3 +55,6 @@
   水滴先进入漏桶，漏桶以一定速度向外出水。当水流入速度过大，桶会直接溢出。
 
  即Request进入一个固定容量的Queue，若Queue满，则拒绝新的Request，可以阻塞，也可以抛异常。这种模型其实非常类似MQ的思想，利用漏桶削峰填谷，使得Queue的下游具有一个稳定流量。
+
+
+[常见架构设计总结](https://zhuanlan.zhihu.com/p/147691411)
