--- a/framework/云原生架构.md
+++ b/framework/云原生架构.md
@@ -19,6 +19,22 @@
  微服务|应用容器|DevOps|持续部署
  function|serverless|AIOps/NoOps
  
+* 单体架构
+  
+  适用于流量规模较小的业务，将所有功能集中于同一个应用代码中，以有效降低管理复杂
+度及成本；
+  * 特点
+    1. 所有功能运行于同一个进程中，通过双机或者前置负载均衡器实现负载分流；
+    2. 基于数据访问框架（ORM）能够有效简化数据CRUD操作的工作量
+
+  * 优点
+
+    1. 小项目开发快、成本低
+    2. 架构简单，易于测试和部署
+  * 缺点
+    
+    1. 项目模块耦合严重，不利于协同开发和升级维护
+    2. 新增业务和性能扩展较为困难
 
 
 
