--- a/framework/云原生架构.md
+++ b/framework/云原生架构.md
@@ -36,7 +36,23 @@
     1. 项目模块耦合严重，不利于协同开发和升级维护
     2. 新增业务和性能扩展较为困难
 
+* 垂直应用架构
 
+  随着流量规模逐渐增大，扩展单体应用部署的副本数（水平扩容）来提升系统容量和性能的边际收益快速降低，
+此时，提升效率的方法之一是将一个大的单体应用垂直拆分为几个功能独立的小单体。
+
+  用于分离前后台逻辑、加速前端页面开发的Web框架(MVC模型、视图、控制器)成为关键所在；
+
+  * 优点
+    
+    1. 有利于提升开发效率
+    2. 有利于降低维护难度
+    3. 便于水平扩展、分散负载
+    4. 有利于提升容错能力
+       
+  * 缺点
+    
+    1. 烟囱架构，公用模块无法复用
 
 
 
