--- a/framework/云原生架构.md
+++ b/framework/云原生架构.md
@@ -54,7 +54,24 @@
     
     1. 烟囱架构，公用模块无法复用
 
+ * 分布式RPC架构
 
+   随着垂直应用数量的增加，应用间的交互无可避免，抽取公共业务作为独立的服务形成稳
+定的服务中心，并支持前后台在逻辑上的分离；
+
+  * 分布式服务框架(RPC)成为关键技术；
+  * 常见的RPC框架
+    
+    * Goggle gRPC
+    * Facebook Thrift
+    * Baidu bRPC
+    * 蚂蚁金服 SOFA-RPC
+    * Alibaba Dubbo
+   
+   * 缺点
+
+     1. 服务间的耦合度较高
+     2. 调用关系错综复杂，难以维护
 
 
 
