--- a/framework/云原生架构.md
+++ b/framework/云原生架构.md
@@ -73,7 +73,68 @@
      1. 服务间的耦合度较高
      2. 调用关系错综复杂，难以维护
 
+* 弹性SOA架构
 
+  随着服务数量的增加，系统之间的RPC数量也将倍数
+级放大，接口协议不统一、服务监控难、服务负载均
+衡难等问题将更加突出，维护的成本也越来越高
+
+  * 解决方案
+
+    1. 支持应用的进一步水平拆分，各自承载一部分客户端流量；
+    2. 为系统增加一个服务治理中心基于访问压力实时管理集群容量，提高集群利用率；
+       于是提高机器利用率的资源调度和治理中心(SOA)，将成为系统的关键所在；
+
+  * 什么是注册中心？
+    
+    注册中心可以说是微服务架构中通讯录，它记录了服务和服务地址的映射关系。在分布式架构中，
+    服务会注册到这里，当服务需要调用其它服务时，就这里找到其他服务的地址，进行调用。
+
+  * 注册中心需要解决的问题
+ 
+    1. 服务注册后，如何被及时发现
+    2. 服务宕机后，如何及时下线
+    3. 服务如何有效的水平扩展
+    4. 服务发现时，如何进行路由
+    5. 服务异常时，如何进行降级
+
+  * 注册中心：  Consul、Zookeeper、Etcd、Eureka
+  * 配置中心：  Apollo(携程)、Disconf（百度，针对Spring）
+  * 分布式存储： 对象存储、文件存储
+
+*  微服务架构
+
+  * 服务架构诞生的背景
+
+    1. 敏捷开发、CICD、DevOps文化得到进一步的发展和实践
+    2. 以Docker为代表的现代应用容器技术的出现
+       
+  * 什么是微服务？
+    
+    微服务是一种开发应用程序的架构和组织方法，这种应用程序由通过明确定义的API进行
+    通信的小型独立服务组成，每个服务由各个小型独立团队负责。
+
+    * 微服务特点
+
+      1. 对服务进行原子化拆分
+      2. 每个微服务的独立打包、部署和升级
+      3. 基于小团队敏捷交付
+
+    * 微服务治理需要解决的问题
+   
+      分布式环境中，网络的不可靠性无法忽略，可靠地解决如下问题，方能确保落地
+   
+      1. 服务注册和服务发现
+      2. 客户端重试
+      3. 可配置的超时机制
+      4. 负载均衡
+      5. 限速
+      6. 熔断
+      7. 服务间路由
+      8. 异常点检测
+      9. 健康状态检查
+      10. 流量整型
+      
 
 
 
