--- a/framework/云原生架构.md
+++ b/framework/云原生架构.md
@@ -135,7 +135,11 @@
       9. 健康状态检查
       10. 流量整型
       
+* 什么是云原生？
 
+  云原生= 微服务+DevOps+持续交付+容器化
+
+  
 
 
 [iac基础设施即编码](https://www.51cto.com/article/711841.html)
