--- a/framework/云原生架构.md
+++ b/framework/云原生架构.md
@@ -73,7 +73,7 @@
      1. 服务间的耦合度较高
      2. 调用关系错综复杂，难以维护
 
-* 弹性SOA架构
+* 弹性SOA架构(SOA全程Service-Oriented Architecture，面向服务的架构)
 
   随着服务数量的增加，系统之间的RPC数量也将倍数
 级放大，接口协议不统一、服务监控难、服务负载均
@@ -139,7 +139,61 @@
 
   云原生= 微服务+DevOps+持续交付+容器化
 
+
+* RPC服务
+
+    RPC是一个完整的远程调用方案，它包括了：接口规范+序列化反序列化规范+通信协议等。
+
+
+* 应用部署和发布
   
+  手动发布   脚本发布   工具化发布   使用发布系统    全自动化发布
 
+* 应用监控
+  
+   * 指标监控： Zabbix  Prometheus
+   * 集中式日志管理：ElasticSearch， LogStash、 Filebeat/Fluentd、 Kibana(ELK)
+   * 调用链跟踪及性能监控：SkyWalking/Zipkin/Jaeger
+     
+* 应用构建与交付
 
+    * 源代码控制和版本跟踪：Git、GitHub/GitLab/Gitee/Gitea
+    * CICD：Jenkins、SonarQube argoCD
+    * 容器编排 Kubernetes 、Mesos、 Docker-compose
+    * 容器化：Docker、Podman
+    * 服务网格：istio、envoy
+    * 分布式存储：Ceph
+ 
+ * 云计算工程师技术图谱
+
+   * Web服务器和缓存：apache、tomcat、nginx、lighttpd、varnish
+   * 监控：nagios、ganglia、cacti、zabbix、falcon
+   * 自动部署：ansible、salt、puppet、cobbler
+   * 配置管理：puppet、cfengine、ansible
+   * 负载均衡：lvs、haproxy、nginx LVS 运用在上千台服务器
+   * 高可用：keepalived 、heartbeat、corosync pacemaker
+   * 数据库：mysql、oracle、sqlserver、PostgreSQL
+   * 大数据平台：hadoop、spark、storm
+   * 分布式存储：Fastdfs、mogileFS、ceph
+   * 非关系数据库：hbase、cassandra、redis、MongoDB
+   * 容器：lxc、docker、 kubernetes(K8s)
+   * 虚拟化：openstack、xen、kvm
+   * 安全：selinux、acl、iptables、Kerberos、snort、nmap
+   * 问题追查：netstat、top、tcpdump、dstat、htop
+   * 持续集成：git、jenkins、maven
+   * 日志分析： ElasticSearch 、Logstash 、Kibana （ELK）
+   * 消息队列: zero-MQ 、rabbitMQ 、ActiveMQ
+     
+* 云原生开发工程师技术图谱
+
+   * 容器和容器编排：K8S、K8S二次开发
+   * 开发语言：GO、python为主
+   * 服务网格：Istio、Envoy
+   * CI/CD：ArgoCD、CI/CD Pipeline
+   * 分布式链路追踪：Skywalking
+   * 分布式存储：Ceph
+   * Serverless：Knative
+   * 运维平台开发：CMDB、workflow、jumpserver等
+ 
+     
 [iac基础设施即编码](https://www.51cto.com/article/711841.html)
