--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -71,6 +71,10 @@ https://fls.jetbrains-agent.com
 
 [linux系统磁盘扩容工具gparted](https://gparted.org/download.php)
 
+## AI 工具
+
+[ChatGPT 3.0在线](https://chat18.aichatos.xyz/)
+
 
 ## VPN 工具
 
