--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -71,6 +71,7 @@ https://fls.jetbrains-agent.com
 
 [linux系统磁盘扩容工具gparted](https://gparted.org/download.php)
 
+
 ## AI 工具
 
 [ChatGPT 3.0在线](https://chat18.aichatos.xyz/)
@@ -79,6 +80,8 @@ https://fls.jetbrains-agent.com
 ## VPN 工具
 
 [ubuntu16.04 系统中OpenVPN安装](https://www.vxworks.net/linux/191-step-by-step-for-installing-openvpn-on-ubuntu-16-04)
+
+[wireguard VPN](https://www.wireguard.com/install/)
 
 [github加速神器](https://github.com/dotnetcore/FastGithub)
 
