--- a/docker/阿里云镜像加速.md
+++ b/docker/阿里云镜像加速.md
@@ -32,3 +32,19 @@ sudo systemctl restart docker
 docker login --username=18761806026@163.com xxxx
 
 输入密码ok
+
+
+## 国内其他环境下精选加速推荐
+
+```
+#!/bin/sh
+cat <<-EOF > /etc/docker/daemon.json 
+{
+  "registry-mirrors": [
+  	"https://docker.xuanyuan.me"
+  	]
+}
+EOF
+systemctl daemon-reload
+systemctl restart docker
+```
