--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -85,6 +85,9 @@ https://fls.jetbrains-agent.com
 
 [github加速神器](https://github.com/dotnetcore/FastGithub)
 
+## 代理软件
+[Squid for Windows](https://squid.diladele.com/)
+
 ## 黑客技术相关
 [Linux服务器暴力破解](https://www.freebuf.com/sectool/159488.html)
 
