--- a/tools/软件开发实用工具收集.md
+++ b/tools/软件开发实用工具收集.md
@@ -49,6 +49,8 @@ https://fls.jetbrains-agent.com
   
   [vscode](https://code.visualstudio.com/download)
 
+  `Mermaid Editor` 美人鱼编辑插件，用简单的标记语言去绘图，方便开发人员做相关设计
+
 ## 提升审美的网站
 
 [站酷](http://www.zcool.com.cn)
